# DeepSeek_Science

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  KERNEL_RFC.md  LICENSE  README.md  ROADMAP.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/deepseek-science-artifacts/: Cargo.toml
crates/deepseek-science-artifacts/src/: envelope.rs  error.rs  hash.rs  kind.rs  lib.rs  manifest.rs  review.rs
crates/deepseek-science-chemistry/: Cargo.toml
crates/deepseek-science-chemistry/src/: error.rs  kinetics.rs  kinetics_artifact.rs  kinetics_plot.rs  kinetics_svg.rs  lib.rs
crates/deepseek-science-cli/: Cargo.toml
crates/deepseek-science-cli/src/: lib.rs  main.rs
crates/deepseek-science-cli/tests/: data_convert_smoke.rs  data_inspect_smoke.rs  kinetics_analyze_smoke.rs  kinetics_artifact_smoke.rs  kinetics_plot_smoke.rs
crates/deepseek-science-cli/tests/fixtures/: kinetics_invalid_csv.csv  kinetics_missing_concentration_column.csv  kinetics_missing_time_column.csv  kinetics_success.csv
crates/deepseek-science-common/: Cargo.toml
crates/deepseek-science-common/src/: csv.rs  error.rs  (+8 more)
crates/deepseek-science-core/: Cargo.toml
crates/deepseek-science-model/: Cargo.toml
crates/deepseek-science-model-deepseek/: Cargo.toml
crates/deepseek-science-prompt/: Cargo.toml
crates/deepseek-science-sandbox/: Cargo.toml
crates/deepseek-science-storage/: Cargo.toml
crates/deepseek-science-storage/src/: atomic.rs  error.rs  layout.rs  lib.rs  repository.rs
crates/deepseek-science-storage/tests/: atomic_create_new.rs
crates/deepseek-science-tools/: Cargo.toml
docs/: architecture.md  code_style.md  disk_safety.md
docs/decisions/: 0001-rust-only-headless-core.md  0002-no-ui-in-phase-1.md  0003-hybrid-model-gateway.md  0004-disk-safety-policy.md
docs/reports/: phase1_foundation_audit.md  phase1_kernel_integration_audit.md  phase2_cli_kinetics_analyze_design.md  phase2_cli_structured_output_design.md  phase2_kinetics_artifact_mapping_design.md  phase2_kinetics_csv_adapter_design.md  phase2_kinetics_csv_design.md  phase2_v0_1_cli_audit.md  phase2_v0_2_cli_audit.md  phase3_persistence_boundary_rfc.md  phase3_v0_3_output_persistence_audit.md  phase4_data_inspect_user_path_audit.md  phase4_end_to_end_data_path_audit.md  phase4_explicit_data_conversion_rfc.md  phase4_real_lab_data_import_rfc.md  phase4_v0_4_release_audit.md  phase5_kinetics_svg_visualization_audit.md  phase5_kinetics_svg_visualization_rfc.md  phase5_v0_5_release_audit.md  phase6_deterministic_artifact_envelope_rfc.md  phase6_kinetics_artifact_audit.md  phase6_v0_6_release_audit.md  phase7_roadmap_audit_rfc.md  v0_2_roadmap.md
packs/chemistry/: pack.toml
scripts/: clean-dev.sh  doctor.sh
tests/fixtures/: kinetics_first_order.csv
(+39 files in other folders)
