[package]
name = "deepseek-science-chemistry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deepseek-science-common = { path = "../deepseek-science-common" }
deepseek-science-core = { path = "../deepseek-science-core" }
thiserror.workspace = true

[lints]
workspace = true
