[package]
name = "deepseek-science-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deepseek-science-artifacts = { path = "../deepseek-science-artifacts" }
deepseek-science-core = { path = "../deepseek-science-core" }
thiserror.workspace = true

[lints]
workspace = true
